--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins",'Open Sans', sans-serif;
   font-weight: 300;
   color: #444;
   line-height: 1.9;
